# pp-router

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  cloudbaserc.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  index.css  main.tsx
frontend/src/components/: AuthPanel.tsx  ChatPanel.tsx  HistoryPanel.tsx  ModelsPanel.tsx  ModelsPopover.tsx  badges.tsx  usageText.tsx
pprouter/: api.py  config.py  history.py  main.py  router_engine.py  routing.py  schemas.py  security.py  zh_complexity.py
specs/production-hardening/: design.md  requirements.md  tasks.md
specs/public-access-refresh/: design.md  requirements.md  tasks.md
tests/: test_api_auth.py  test_api_public.py  test_history.py  test_routing.py  test_schemas.py  test_security.py  test_streaming.py  test_zh_complexity.py
