[project]
name = "pprouter"
version = "0.1.0"
description = "pp-router MVP: difficulty-based LLM routing gateway over litellm"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "litellm",
]

[tool.uv]
package = false

[tool.uv.sources]
litellm = { path = "litellm", editable = true }
